--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,119 +1,200 @@
-- title: Spectacular Oslo & Bergen break with optional fjord tour
-  id: spectacular-oslo-bergen-break-with-optional-fjord-tour
-  location: Scandic St. Olavs plass & Clarion Hotel Admiral, Norway
-  description: A fantastic four-night trip to Norway's Oslo and Bergen, with one of the world's most scenic train journeys between the two cities - including flights and an optional fjord tour
-  price: 459
-  price-description: NOK per person
+################################################################################
+# DOMESTIC OFFERS
+################################################################################
+
+- title: Lad batteriene på Norefjell
+  id: lad-batteriene-på-norefjell
+  location: Norefjell Ski & Spa, Norefjell, Buskerud, Norge
+  description: Prisvinnende spahotell i naturskjønne omgivelser, inkludert frokost, matrabatt og ekstragoder
+  price: 1350
+  price-description: per rom per natt
+  saved: 54
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/32900/e982c4f8_7e71_4ad4_95de_bcf5411485b4.jpg
+  link: https://no.secretescapes.com/lad-batteriene-paa-norefjell-norefjell-ski-and-spa-norefjell-buskerud-norge-no/sale
+  domestic: true
+
+- title: Eksklusive spaopplevelser på Farris Bad
+  id: eksklusive-spaopplevelser-på-farris-bad
+  location: Farris Bad, Larvik, Vestfold, Norge
+  description: Avslappende opphold på Farris Bad, inkludert frokost og adgang til det 2500 m² store spaet
+  price: 1750
+  price-description: per rom per natt
+  saved: 30
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/45456/83a42c93_3380_4637_b1c5_ff96324e2016.jpg
+  link: https://no.secretescapes.com/eksklusive-spaopplevelser-paa-farris-bad-farris-bad-larvik-vestfold-norge-no/sale
+  domestic: true
+
+- title: Magisk fjordutsikt fra Skybaren
+  id: magisk-fjordutsikt-fra-skybaren
+  location: Clarion Hotel & Congress Trondheim, Trondheim, Norge
+  description: Stilig hotell av ypperste klasse med Skybar, like ved Pirbadet og Rockheim i Trondheim
+  price: 1070
+  price-description: per rom per natt
   saved: 37
-  expires: 2020/04/14
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/10431/06368d1a_3eae_4fdc_a62b_4a85276b6b3d.jpg
+  link: https://no.secretescapes.com/magisk-fjordutsikt-fra-skybaren-clarion-hotel-and-congress-trondheim-trondheim-norge-no/sale
   domestic: true
 
-- title: Farris Bad
-  id: farris-bad
-  location: Larvik, Norway
-  description: Upscale beachfront stay at the first Nordic balneological health resort, with a supersized spa
-  price: 214
-  price-description: NOK per person
-  saved: 33
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
+- title: Lekkert designhotell i Bergen
+  id: lekkert-designhotell-i-bergen
+  location: Magic Hotel Solheimsviken, Bergen, Norge
+  description: Opphold på designhotell i vestlandsbyen Bergen, inkl. frokostbuffet og restaurantrabatt
+  price: 670
+  price-description: per rom per natt
+  saved: 21
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/39581/f499d3f8_661d_432b_a719_3311bf4d0fe5.jpg
+  link: https://no.secretescapes.com/lekkert-designhotell-i-bergen-magic-hotel-solheimsviken-bergen-norge/sale
   domestic: true
 
-- title: First Hotel Marin
-  id: first-hotel-marin
-  location: Bergen, Norway
-  description: A unique stay in the centre of picturesque Bergen, just a stone's throw from the harbour
-  price: 48
-  price-description: NOK per person
-  saved: 43
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
-  domestic: true
 
-- title: Magic Hotel
-  id: magic-hotel
-  location: Bergen, Norway
-  description: A brand-new hip hotel in the centre of Bergen, designed by a top New York designer
-  price: 73
-  price-description: NOK per person
-  saved: 55
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
-  domestic: true
+################################################################################
+# NON DOMESTIC OFFERS
+################################################################################
 
-- title: Sola Strand Hotel
-  id: sola-strand-hotel
-  location: Sola, Norway
-  description: Discover one of the world's sixth best beaches on Norway's gorgeous coast, with breakfast and more
-  price: 79
-  price-description: NOK per person
-  saved: 47
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
+- title: Elegant designhotell på Stureplan
+  id: elegant-designhotell-på-stureplan
+  location: Story Hotel Riddargatan, Stockholm, Sverige
+  description: Elegant og unikt designhotell på Stureplan i Stockholm, inkl. frokostbuffet
+  price: 1222
+  price-description: per rom per natt
+  saved: 67
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62203/4cf7c76e_a17c_43e7_8d3f_54314311ee85.jpg
+  link: https://no.secretescapes.com/elegant-designhotell-paa-stureplan-story-hotel-riddargatan-stockholm-sverige-no-no/sale
   domestic: false
 
-- title: Spectacular Oslo & Bergen break with optional fjord tour
-  id: spectacular-oslo-bergen-break-with-optional-fjord-tour
-  location: Scandic St. Olavs plass & Clarion Hotel Admiral, Norway
-  description: A fantastic four-night trip to Norway's Oslo and Bergen, with one of the world's most scenic train journeys between the two cities - including flights and an optional fjord tour
-  price: 459
-  price-description: NOK per person
-  saved: 37
-  expires: 2020/04/14
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
+- title: Luksushotell med panoramautsikt
+  id: luksushotell-med-panoramautsikt
+  location: W Barcelona, Barcelona, Spania
+  description: Kombiner bypuls og strandlek på femstjerners strandhotell med spa og fire restauranter
+  price: 2820
+  price-description: per rom per natt
+  saved: 30
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/63501/26bae93a_368c_4368_a439_0fbb1459afa6.jpg
+  link: https://no.secretescapes.com/luksushotell-med-panoramautsikt-w-barcelona-barcelona-spania/sale
   domestic: false
 
-- title: Farris Bad
-  id: farris-bad
-  location: Larvik, Norway
-  description: Upscale beachfront stay at the first Nordic balneological health resort, with a supersized spa
-  price: 214
-  price-description: NOK per person
-  saved: 33
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
+- title: La deg forføre av Stockholms utsikt
+  id: la-deg-forføre-av-stockholms-utsikt
+  location: Clarion Hotel Sign, Stockholm, Sverige
+  description: Stilig designhotell med spa i Stockholm, inkludert frokost og en adgang til spaet
+  price: 1470
+  price-description: per rom per natt
+  saved: 30
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90526/e82e2314_8cc9_460f_b88b_15a939bf1f2d.jpg
+  link: https://no.secretescapes.com/la-deg-forfoere-av-stockholms-utsikt-clarion-hotel-sign-stockholm-sverige-no/sale
   domestic: false
 
-- title: First Hotel Marin
-  id: first-hotel-marin
-  location: Bergen, Norway
-  description: A unique stay in the centre of picturesque Bergen, just a stone's throw from the harbour
-  price: 48
-  price-description: NOK per person
-  saved: 43
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
+- title: Vin og design i Stockholm
+  id: vin-og-design-i-stockholm
+  location: The Winery Hotel, Stockholm, Sverige
+  description: Svensk designdrøm for vinelskere rett utenfor Stockholm, inkludert frokost og mer
+  price: 970
+  price-description: per rom per natt
+  saved: 42
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/58592/adff5716_dada_4b0a_838d_10b92dbfde5a.jpg
+  link: https://no.secretescapes.com/vin-og-design-i-stockholm-the-winery-hotel-stockholm-sverige-no-no/sale
   domestic: false
 
-- title: Magic Hotel
-  id: magic-hotel
-  location: Bergen, Norway
-  description: A brand-new hip hotel in the centre of Bergen, designed by a top New York designer
-  price: 73
-  price-description: NOK per person
-  saved: 55
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
+- title: Fem stjerner ved Guggenheim
+  id: fem-stjerner-ved-guggenheim
+  location: Gran Hotel Domine Bilbao, Bilbao, Spania
+  description: Et designhotell i nærheten av Guggenheim-museet med frokost og ekstragoder
+  price: 1888
+  price-description: per rom per natt
+  saved: 28
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/19032/495d410a_c6c5_4140_81dc_aec30a81cc62.jpg
+  link: https://no.secretescapes.com/fem-stjerner-ved-guggenheim-gran-hotel-domine-bilbao-bilbao-spania/sale
   domestic: false
 
-- title: Sola Strand Hotel
-  id: sola-strand-hotel
-  location: Sola, Norway
-  description: Discover one of the world's sixth best beaches on Norway's gorgeous coast, with breakfast and more
-  price: 79
-  price-description: NOK per person
-  saved: 47
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
+- title: Designhotell i populære Berlin
+  id: designhotell-i-populære-berlin
+  location: Max Brown, Berlin, Tyskland
+  description: Herlig opphold på populært designhotell i Berlin, inkludert velkomstdrink
+  price: 628
+  price-description: per rom per natt
+  saved: 42
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/38233/e76c9353_6e7a_41de_9ef3_3933bb57a50c.jpg
+  link: https://no.secretescapes.com/designhotell-i-populaere-berlin-max-brown-berlin-tyskland/sale
+  domestic: false
+
+- title: Luksuriøst boutiquehotell i Madrid
+  id: luksuriøst-boutiquehotell-i-madrid
+  location: Coolrooms Atocha, Madrid, Spania
+  description: Sentralt boutiquehotell med utendørs basseng, bar og restaurant, inkludert frokost m.m.
+  price: 1461
+  price-description: per rom per natt
+  saved: 36
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90650/27727061_9a9d_478c_a239_a96e3b890be2.jpg
+  link: https://no.secretescapes.com/luksurioest-boutiquehotell-i-madrid-coolrooms-atocha-madrid-spania/sale
+  domestic: false
+
+- title: Femstjerners med utsikt i Barcelona
+  id: femstjerners-med-utsikt-i-barcelona
+  location: Gran Hotel La Florida, Barcelona, Spania
+  description: Luksuriøst opphold med utsikt i utkanten av Barcelona, inkludert frokost og romoppgradering
+  price: 2059
+  price-description: per rom per natt
+  saved: 29
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/44085/257bb694_6873_4ef1_8369_077385effc08.jpg
+  link: https://no.secretescapes.com/femstjerners-med-utsikt-i-barcelona-gran-hotel-la-florida-barcelona-spania-no/sale
+  domestic: false
+
+- title: Lev livet som rockestjerne
+  id: lev-livet-som-rockestjerne
+  location: Hard Rock Hotel Tenerife, Tenerife, Spania
+  description: Opphold på femstjerners Hard Rock-hotell på Tenerife, inkl. frokost eller halvpensjon
+  price: 1276
+  price-description: per rom per natt
+  saved: 21
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/41212/7fdadcfa_7271_4eac_9ae5_014c5f53d32e.jpg
+  link: https://no.secretescapes.com/lev-livet-som-rockestjerne-hard-rock-hotel-tenerife-tenerife-spania/sale
+  domestic: false
+
+- title: Eksklusivt boutiquehotell i Portal Nous
+  id: eksklusivt-boutiquehotell-i-portal-nous
+  location: Portals Hills Boutique Hotel, Portals Nous, Mallorca, Spania
+  description: Opphold på vakkert og moderne hotell med spa, basseng og nattklubb, inkludert frokost m.m.
+  price: 2077
+  price-description: per suite per natt
+  saved: 58
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90577/3a0e4e68_b76e_47ae_9708_b4b5c5804ae1.jpg
+  link: https://no.secretescapes.com/eksklusivt-boutiquehotell-i-portal-nous-portals-hills-boutique-hotel-portals-nous-mallorca-spania/sale
+  domestic: false
+
+- title: Italiensk eleganse i hovedstaden
+  id: italiensk-eleganse-i-hovedstaden
+  location: Palazzo Montemartini, Roma, Italia
+  description: Femstjerners hotell i sentrum av Roma, inkludert frokost og velkomstdrink
+  price: 1981
+  price-description: per rom per natt
+  saved: 27
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9500/43e8a2de_56ad_41ff_87b2_459f55839766.jpg
+  link: https://no.secretescapes.com/italiensk-eleganse-i-hovedstaden-palazzo-montemartini-roma-italia/sale
+  domestic: false
+
+- title: Femstjerners drøm i Venezia
+  id: femstjerners-drøm-i-venezia
+  location: Hotel Excelsior Venice Lido Resort, Venezia, Italia
+  description: Luksuriøst opphold i Venezia, inkludert frokost og en flaske prosecco på rommet
+  price: 2354
+  price-description: per rom per natt
+  saved: 57
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/75630/da3afdac_49a3_4f8d_8764_342094151f15.jpg
+  link: https://no.secretescapes.com/femstjerners-droem-i-venezia-hotel-excelsior-venice-lido-resort-venezia-italia-no2/sale
   domestic: false
