--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,119 +1,308 @@
-- title: Spectacular Oslo & Bergen break with optional fjord tour
-  id: spectacular-oslo-bergen-break-with-optional-fjord-tour
-  location: Scandic St. Olavs plass & Clarion Hotel Admiral, Norway
-  description: A fantastic four-night trip to Norway's Oslo and Bergen, with one of the world's most scenic train journeys between the two cities - including flights and an optional fjord tour
-  price: 459
-  price-description: SEK per person
-  saved: 37
-  expires: 2020/04/14
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
+################################################################################
+# DOMESTIC OFFERS
+################################################################################
+
+- title: Boutiquehotell på Östermalm
+  id: boutiquehotell-på-östermalm
+  location: Story Hotel Riddargatan, Stockholm
+  description: En bohemiskt chic designsaga i centrala Stockholm, inkl. frukostbuffé
+  price: 1320
+  price-description: per rum per natt
+  saved: 67
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62203/4cf7c76e_a17c_43e7_8d3f_54314311ee85.jpg
+  link: https://www.secretescapes.se/boutiquehotell-paa-ostermalm-story-hotel-riddargatan-stockholm01/sale
   domestic: true
 
-- title: Farris Bad
-  id: farris-bad
-  location: Larvik, Norway
-  description: Upscale beachfront stay at the first Nordic balneological health resort, with a supersized spa
-  price: 214
-  price-description: SEK per person
+- title: Spavistelse på designhotell i Stockholm
+  id: spavistelse-på-designhotell-i-stockholm
+  location: Clarion Hotel Sign, Stockholm
+  description: Snyggt designhotell med spa i närheten av Hötorget, inkl. frukost och spaentré
+  price: 1595
+  price-description: per rum per natt
+  saved: 30
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90526/e82e2314_8cc9_460f_b88b_15a939bf1f2d.jpg
+  link: https://www.secretescapes.se/designsaeker-vistelse-i-centrala-stockholm-clarion-hotel-sign-stockholm/sale
+  domestic: true
+
+- title: Fina vyer från Malmös högsta bar
+  id: fina-vyer-från-malmös-högsta-bar
+  location: Clarion Hotel & Congress Malmö Live, Malmö
+  description: Cool design och centralt läge i hjärtat av Malmö, inkl. frukost och matrabatt
+  price: 810
+  price-description: per rum per natt
+  saved: 42
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/18864/981b42be_2400_4009_84f1_85c209e99817.jpg
+  link: https://www.secretescapes.se/fina-vyer-fraan-malmos-hogsta-bar-clarion-hotel-and-congress-malmo-live-malmo-se3/sale
+  domestic: true
+
+- title: Designhotell med vinfokus i Solna
+  id: designhotell-med-vinfokus-i-solna
+  location: The Winery Hotel, Solna, Stockholm
+  description: Urban design och takpool strax utanför Stockholm city, inkl. frukostbuffé
+  price: 1050
+  price-description: per rum per natt
+  saved: 42
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/58592/adff5716_dada_4b0a_838d_10b92dbfde5a.jpg
+  link: https://www.secretescapes.se/designhotell-med-vinfokus-i-solna-the-winery-hotel-solna-stockholm/sale
+  domestic: true
+
+- title: Prisbelönt designhotell i Linköping
+  id: prisbelönt-designhotell-i-linköping
+  location: Quality Hotel The Box, Linköping
+  description: Nybyggt hotell med lyxigt wellnessområde, inkl. frukost och tvårättersmiddag som tillval
+  price: 890
+  price-description: per rum per natt
+  saved: 22
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73003/09903476_97eb_4551_a24c_ee62e9fe965a.jpg
+  link: https://www.secretescapes.se/prisbelont-designhotell-i-linkoping-quality-hotel-the-box-linkoping/sale
+  domestic: true
+
+- title: Skånskt boutiquehotell med gourmetmat
+  id: skånskt-boutiquehotell-med-gourmetmat
+  location: Wanås Restaurant Hotel, Wanås, Skåne
+  description: Boutiquehotell på den skånska landsbygden, inkl. halvpension och entré till skulpturparken
+  price: 2595
+  price-description: per rum per natt
+  saved: 25
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/79540/fa2e7a13_baa7_411f_89c6_b0109c656ef2.jpg
+  link: https://www.secretescapes.se/skaanskt-boutiquehotell-med-gourmetmat-wanaas-restaurant-hotel-wanaas-skaane/sale
+  domestic: true
+
+- title: Anrikt hotell med spa i skånska Höör
+  id: anrikt-hotell-med-spa-i-skånska-höör
+  location: Höörs Gästgifwaregård, Höör, Skåne
+  description: Stilfullt hotell med restaurang, engelsk pub och spa, inkl. frukost, trerätters och spaentré
+  price: 2160
+  price-description: per rum per natt
   saved: 33
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90471/cb7410d1_515f_4e8e_bac4_d9c070de405a.jpg
+  link: https://www.secretescapes.se/elegant-skaanskt-hotell-med-anor-fraan-1600-talet-hoors-gaestgifwaregaard-hoor-skaane/sale
   domestic: true
 
-- title: First Hotel Marin
-  id: first-hotel-marin
-  location: Bergen, Norway
-  description: A unique stay in the centre of picturesque Bergen, just a stone's throw from the harbour
-  price: 48
-  price-description: SEK per person
-  saved: 43
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
+- title: Vackert boutiquehotell utanför Stockholm
+  id: vackert-boutiquehotell-utanför-stockholm
+  location: Görvälns Slott, Järfälla, utanför Stockholm
+  description: Lev lyxlivet på ett originellt boutiquehotell på anrikt slott, inkl. frukost och fyrarättersmiddag
+  price: 2990
+  price-description: per rum per natt
+  saved: 35
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90811/18b1d890_eb28_461b_9035_c2a1a69e4e83.jpg
+  link: https://www.secretescapes.se/vackert-boutiquehotell-utanfor-stockholm-gorvaelns-slott-jaerfaella-utanfor-stockholm-se/sale
   domestic: true
 
-- title: Magic Hotel
-  id: magic-hotel
-  location: Bergen, Norway
-  description: A brand-new hip hotel in the centre of Bergen, designed by a top New York designer
-  price: 73
-  price-description: SEK per person
-  saved: 55
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
-  domestic: true
 
-- title: Sola Strand Hotel
-  id: sola-strand-hotel
-  location: Sola, Norway
-  description: Discover one of the world's sixth best beaches on Norway's gorgeous coast, with breakfast and more
-  price: 79
-  price-description: SEK per person
-  saved: 47
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
+################################################################################
+# NON DOMESTIC OFFERS
+################################################################################
+
+- title: Exklusivt spa vid havet i Norge
+  id: exklusivt-spa-vid-havet-i-norge
+  location: Farris Bad, Larvik, Norge
+  description: Återställ balansen med en vistelse på Nordens största spa, inkl. frukost och spaentré
+  price: 1900
+  price-description: per rum per natt
+  saved: 30
+  expires: 2019/03/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/45456/83a42c93_3380_4637_b1c5_ff96324e2016.jpg
+  link: https://www.secretescapes.se/exklusivt-spa-vid-havet-i-norge-farris-bad-larvik-norge/sale
   domestic: false
 
-- title: Spectacular Oslo & Bergen break with optional fjord tour
-  id: spectacular-oslo-bergen-break-with-optional-fjord-tour
-  location: Scandic St. Olavs plass & Clarion Hotel Admiral, Norway
-  description: A fantastic four-night trip to Norway's Oslo and Bergen, with one of the world's most scenic train journeys between the two cities - including flights and an optional fjord tour
-  price: 459
-  price-description: SEK per person
+- title: Hemtrevligt designhotell i Berlin
+  id: hemtrevligt-designhotell-i-berlin
+  location: Max Brown, Berlin, Tyskland
+  description: Härlig vistelse på populärt designhotell i Berlin, inkl. välkomstdrink
+  price: 680
+  price-description: per rum per natt
+  saved: 42
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/38233/4d7555f7_8322_4603_ad8a_16b0158a2b1c.jpg
+  link: https://www.secretescapes.se/hemtrevligt-designhotell-i-berlin-max-brown-berlin-tyskland/sale
+  domestic: false
+
+- title: Lyxhotell med panoramautsikt över Barcelona
+  id: lyxhotell-med-panoramautsikt-över-barcelona
+  location: W Barcelona, Barcelona, Spanien
+  description: Kombinera storstadssemestern med strandliv på femstjärnigt designhotell, inkl. frukost
+  price: 3050
+  price-description: per rum per natt
+  saved: 30
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/63501/890106ca_c867_4ff3_b691_3bdc9d3d50cc.jpg
+  link: https://www.secretescapes.se/lyxhotell-med-panoramautsikt-over-barcelona-w-barcelona-barcelona-spanien/sale
+  domestic: false
+
+- title: Prisad sparesort i norska fjällen
+  id: prisad-sparesort-i-norska-fjällen
+  location: Norefjell Ski & Spa, Norefjell, Norge
+  description: Ladda batterierna i Norges vackra bergslandskap, inkl. frukost, spaentré och matrabatt
+  price: 1470
+  price-description: per rum per natt
+  saved: 54
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/32900/e982c4f8_7e71_4ad4_95de_bcf5411485b4.jpg
+  link: https://www.secretescapes.se/prisad-sparesort-i-norska-fjaellen-norefjell-ski-and-spa-norefjell-norge/sale
+  domestic: false
+
+- title: Prisbelönt hotell i magiska Trondheim
+  id: prisbelönt-hotell-i-magiska-trondheim
+  location: Clarion Hotel & Congress Trondheim, Trondheim, Norge
+  description: Boende på ett modernt hotell precis vid fjorden, inkl. frukost
+  price: 1160
+  price-description: per rum per natt
   saved: 37
-  expires: 2020/04/14
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/10431/06368d1a_3eae_4fdc_a62b_4a85276b6b3d.jpg
+  link: https://www.secretescapes.se/prisbelont-hotell-i-magiska-trondheim-clarion-hotel-and-congress-trondheim-trondheim-norge/sale
   domestic: false
 
-- title: Farris Bad
-  id: farris-bad
-  location: Larvik, Norway
-  description: Upscale beachfront stay at the first Nordic balneological health resort, with a supersized spa
-  price: 214
-  price-description: SEK per person
-  saved: 33
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
+- title: Strandnära lyxhotell på Teneriffa
+  id: strandnära-lyxhotell-på-teneriffa
+  location: Hard Rock Hotel Tenerife, Adeje, Teneriffa, Spanien
+  description: Femstjärnig semester på hotell vid stranden, med frukost eller halvpension
+  price: 1380
+  price-description: per rum per natt
+  saved: 21
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/41212/7fdadcfa_7271_4eac_9ae5_014c5f53d32e.jpg
+  link: https://www.secretescapes.se/strandnaera-lyxhotell-paa-teneriffa-hard-rock-hotel-tenerife-adeje-teneriffa/sale
   domestic: false
 
-- title: First Hotel Marin
-  id: first-hotel-marin
-  location: Bergen, Norway
-  description: A unique stay in the centre of picturesque Bergen, just a stone's throw from the harbour
-  price: 48
-  price-description: SEK per person
-  saved: 43
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
+- title: Exklusivt boutiquehotell i Portals Nous
+  id: exklusivt-boutiquehotell-i-portals-nous
+  location: Portals Hills Boutique Hotel, Portals Nous, Mallorca, Spanien
+  description: Modernt boende med spa, pool och nattklubb samt utsikt över Palmabukten, inkl. frukost
+  price: 2250
+  price-description: per svit per natt
+  saved: 58
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90577/3a0e4e68_b76e_47ae_9708_b4b5c5804ae1.jpg
+  link: https://www.secretescapes.se/exklusivt-boutiquehotell-i-portals-nous-portals-hills-boutique-hotel-portals-nous-mallorca-spanien/sale
   domestic: false
 
-- title: Magic Hotel
-  id: magic-hotel
-  location: Bergen, Norway
-  description: A brand-new hip hotel in the centre of Bergen, designed by a top New York designer
-  price: 73
-  price-description: SEK per person
-  saved: 55
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
+- title: Lyxhotell i utkanten av Barcelona
+  id: lyxhotell-i-utkanten-av-barcelona
+  location: Gran Hotel La Florida, Barcelona, Spanien
+  description: Lyxig vistelse med utsikt i utkanten av Barcelona, inkl. frukost och välkomstdrink
+  price: 2240
+  price-description: per rum per natt
+  saved: 29
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/44085/257bb694_6873_4ef1_8369_077385effc08.jpg
+  link: https://www.secretescapes.se/lyxhotell-i-utkanten-av-barcelona-gran-hotel-la-florida-barcelona-spanien/sale
   domestic: false
 
-- title: Sola Strand Hotel
-  id: sola-strand-hotel
-  location: Sola, Norway
-  description: Discover one of the world's sixth best beaches on Norway's gorgeous coast, with breakfast and more
-  price: 79
-  price-description: SEK per person
+- title: Stilrent boutiquehotell i Madrid
+  id: stilrent-boutiquehotell-i-madrid
+  location: CoolRooms Atocha, Madrid, Spanien
+  description: Boende på centralt läge, med pool och restaurang, nära uteliv och sevärdheter, inkl. frukost
+  price: 1590
+  price-description: per rum per natt
+  saved: 36
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90650/460ffc76_62e7_468c_9543_4640abc19424.jpg
+  link: https://www.secretescapes.se/stilrent-boutiquehotell-i-madrid-coolrooms-atocha-madrid-spanien/sale
+  domestic: false
+
+- title: Femstjärnigt strandhotell på Ibiza
+  id: femstjärnigt-strandhotell-på-ibiza
+  location: Bless Hotel Ibiza, Cala Nova, Ibiza, Spanien
+  description: Lyxigt boutiquehotell med spa, två pooler och gourmetrestaurang, inkl. frukost
+  price: 2230
+  price-description: per rum per natt
+  saved: 27
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90817/b857bf07_345d_4a47_9799_78bf1715d892.jpg
+  link: https://www.secretescapes.se/femstjaernigt-strandhotell-paa-ibiza-bless-hotel-ibiza-cala-nova-ibiza-spanien/sale
+  domestic: false
+
+- title: Läckert designhotell i Bergen
+  id: läckert-designhotell-i-bergen
+  location: Magic Hotel Solheimsviken, Bergen, Norge
+  description: En hipp bas i Norges näst största stad, inkl. frukost och rabatt i restaurangen
+  price: 730
+  price-description: per rum per natt
+  saved: 21
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/39581/907442d2_a1e7_488a_a406_9f9cb5202324.jpg
+  link: https://www.secretescapes.se/laeckert-designhotell-i-bergen-magic-hotel-solheimsviken-bergen-norge-se1/sale
+  domestic: false
+
+- title: Femstjärnigt mittemot Guggenheim
+  id: femstjärnigt-mittemot-guggenheim
+  location: Gran Hotel Domine, Bilbao, Spanien
+  description: Utforska Bilbao med boende på designhotell vid Guggenheim, inkl. frukost
+  price: 2050
+  price-description: per rum per natt
+  saved: 28
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/19032/495d410a_c6c5_4140_81dc_aec30a81cc62.jpg
+  link: https://www.secretescapes.se/femstjaernigt-mittemot-guggenheim-gran-hotel-domine-bilbao-spanien-se/sale
+  domestic: false
+
+- title: Toppfräscht boende på Costa del Sol
+  id: toppfräscht-boende-på-costa-del-sol
+  location: Palladium Hotel Costa del Sol, Benalmadena, Spanien
+  description: Fräscht hotell precis vid stranden, med all-inclusive
+  price: 1360
+  price-description: per rum per natt
+  saved: 23
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90640/e0d98e02_46f6_4533_b47f_2dda8179527e.jpg
+  link: https://www.secretescapes.se/toppfraescht-boende-paa-costa-del-sol-palladium-hotel-costa-del-sol-benalmadena-spanien/sale
+  domestic: false
+
+- title: Italiensk elegans i huvudstaden
+  id: italiensk-elegans-i-huvudstaden
+  location: Palazzo Montemartini, Rom, Italien
+  description: Femstjärnigt lyxhotell i centrala Rom, inkl. frukost och välkomstdrink
+  price: 2150
+  price-description: per rum per natt
+  saved: 27
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/12093/12c82957_7c59_4d48_a551_59a23c9d25be.jpg
+  link: https://www.secretescapes.se/italiensk-elegans-i-huvudstaden-palazzo-montemartini-rom-italien/sale
+  domestic: false
+
+- title: Femstjärnig vistelse i vackra San Gemini
+  id: femstjärnig-vistelse-i-vackra-san-gemini
+  location: San Gemini Palace, San Gemini, Italien
+  description: Njut av mat och dryck i en mysig stad i Umbrien, inkl. frukost
+  price: 3140
+  price-description: per svit per natt
   saved: 47
-  expires: 2020/04/20
-  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
-  link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90484/cb003673_7d09_4e35_aa02_ac0f52dc936e.jpg
+  link: https://www.secretescapes.se/njut-av-mat-och-dryck-i-vackra-san-gemini-san-gemini-palace-san-gemini-italien/sale
+  domestic: false
+
+- title: Utforska Florens enastående charm
+  id: utforska-florens-enastående-charm
+  location: Hotel Regency, Florens, Italien
+  description: Ett magiskt citybreak på ett elegant hotell, inkl. frukost
+  price: 2250
+  price-description: per rum per natt
+  saved: 30
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90864/c15d475e_4af2_4be1_a517_7723325919ae.jpg
+  link: https://www.secretescapes.se/utforska-florens-enastaaende-charm-hotel-regency-florens-italien-se-1/sale
+  domestic: false
+
+- title: Ottomanskt influerat hotell på ön Lido
+  id: ottomanskt-influerat-hotell-på-ön-lido
+  location: Hotel Excelsior Venice, Venedig, Italien
+  description: Femstjärnigt boende med  privat strand i Venedig, inkl. frukost och prosecco
+  price: 2550
+  price-description: per rum per natt
+  saved: 57
+  expires: 2019/03/25
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/75630/da3afdac_49a3_4f8d_8764_342094151f15.jpg
+  link: https://www.secretescapes.se/ottomanska-influenser-paa-on-lido-hotel-excelsior-venice-venedig-italien-se1/sale
   domestic: false
