--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ sass:
 
 title: Lexus Design Collection
 description: >
-  Oppdag en verden av design med Lexus og Secret Escapes. Legg ut på et urbant eventyr i en Lexux UX og la byen inspirere deg. Utforsk Design Collection med noen av verdens flotteste designhoteller og finn de kuleste stedene å henge med design i fokus i Bergen og Oslo.
+  Oppdag en verden av design med Lexus og Secret Escapes. Legg ut på et urbant eventyr i en Lexus UX og la byen inspirere deg. Utforsk Design Collection med noen av verdens flotteste designhoteller og finn de kuleste stedene å henge med design i fokus i Bergen og Oslo.
 copyright: '© Copyright <span class="js-year">2019</span> Secret Escapes'
 
 # client
